ecmascript/parser/tests/test262-error-references/fail/1b0b9bca042d4440.module.js.stderr
error: Expected {, got numeric literal
 --> $DIR/tests/test262-parser/fail/1b0b9bca042d4440.module.js:1:8
  |
1 | export 3
  |        ^

